# serde-multipart

./: Cargo.toml  README.md  netlify.toml
src/: lib.rs  local_macros.rs  serializers.rs  unserializers.rs
src/unserializers/: bytes.rs  input_file.rs  string.rs
