[package]
name = "serde-multipart"
version = "0.1.0"
authors = ["Waffle <waffle.lapkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
reqwest = { version = "0.10.7", features = ["stream"] }
serde_json = "1.0.57"
take_mut = "0.2.2"
futures = "0.3.5"
derive_more = "0.99.9"
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = "0.3.1"
bytes = "0.5.6"
